--- a/app/views/Rooms/Show.html
+++ b/app/views/Rooms/Show.html
@@ -21,7 +21,7 @@
                 {{range .latestMessages}}
                 [{{.UserName}}] {{.Text}} <br />
                 {{end}}
-                <a href="/r/{{.room.RoomKey}}/logs">more logs ...</a>
+                <a href="/r/{{.room.RoomKey}}/logs" target="_blank">more logs ...</a>
                 <br>
                 new message: <br />
             </div>
