fix admin recentuse bug

--- a/app/views/Admin/Index.html
+++ b/app/views/Admin/Index.html
@@ -3,41 +3,8 @@
 <div id="wrap">
     <div class="container" id="page-main">
         <div class="row">
-            <div class="span2">
-                <div class="box fix_cell">
-                    <div class="cell">
-                        <strong class="gray">社区管理</strong>
-                    </div>
-                    <div class="cell">
-                        <img align="absmiddle" alt="Dashboard" src="/public/images/dashboard.png" valign="middle">
-                        &nbsp;
-                        <a href="/admin" class="current_item">运行状态</a>
-                    </div>
-                    <div class="cell">
-                        <img align="absmiddle" alt="Settings" src="/public/images/settings.png" valign="middle">
-                        &nbsp;
-                        <a href="/admin/site_settings">基本设置</a>
-                    </div>
-                    <div class="cell">
-                        <img align="absmiddle" alt="Users" src="/public/images/users.png" valign="middle">
-                        &nbsp;
-                        <a href="/admin/users">用户</a>
-                    </div>
-                    <div class="cell">
-                        <img align="absmiddle" alt="Nodes" src="/public/images/nodes.png" valign="middle">
-                        &nbsp;
-                        <a href="/admin/planes">位面节点</a>
-                    </div>
-                    <div class="cell">
-                        <img align="absmiddle" alt="Pages" src="/public/images/pages.png" valign="middle">
-                        &nbsp;
-                        <a href="/admin/pages">页面</a>
-                    </div>
-                </div>
-
-            </div>
+            {{template "share/admin_navbar.html" .}}
             <div class="span8">
-
                 <div class="row">
                     <div class="box span8">
                         <div class="cell"> 最新用户 </div>
