--- a/app/views/Users/Show.html
+++ b/app/views/Users/Show.html
@@ -12,6 +12,7 @@
                 <p> weibo: {{.user.Weibo}}</p>
                 <p> Github: {{.user.Github}}</p>
                 <p> Intro: {{.user.Introduction}}</p>
+                <p> Email: {{.user.Email}}</p>
             </div>
         </div>
     </div>
