--- a/app/views/Admin/Rooms.html
+++ b/app/views/Admin/Rooms.html
@@ -12,26 +12,28 @@
                             <table class="topics table">
                                 <thead>
                                     <tr>
-                                        <th class="w50">ID</th>
-                                        <th align="left" class="auto">标识</th>
-                                        <th align="left" class="auto">标题</th>
-                                        <th class="w100">创建</th>
+                                        <th align="left" class="auto">Room</th>
+                                        <th align="left" class="auto">status</th>
+                                        <th class="w100">save logs</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     {{range .rooms}}
                                     <tr>
-                                        <td class="w50">
-                                            {{.Id}}
-                                        </td>
                                         <td class="auto">
                                             <a href="/r/{{.RoomKey}}">{{.RoomKey}}</a>
                                         </td>
                                         <td class="auto">
-                                            {{.Title}}
+                                            "test"
                                         </td>
                                         <td class="w100">
-                                            <small class="gray">{{.CreatedAt}}</small>
+                                            <small class="gray">
+                                                {{if .SaveLogs}} 
+                                                <a href="/admin/{{.RoomKey}}/changelog"> ON </a>
+                                                {{else}} 
+                                                <a href="/admin/{{.RoomKey}}/changelog"> OFF </a>
+                                                {{end}}
+                                            </small>
                                         </td>
                                     </tr>
                                     {{end}}
