add server settings

--- a/app/views/Admin/Index.html
+++ b/app/views/Admin/Index.html
@@ -50,6 +50,14 @@
                                 <tbody>
                                     <tr>
                                         <td align="right" width="40%">
+                                            <span class="gray">Server Name</span>
+                                        </td>
+                                        <td align="left">
+                                            <strong>{{.ServerName}}</strong>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td align="right" width="40%">
                                             <span class="gray">频道总数</span>
                                         </td>
                                         <td align="left">
