show online users with a room

--- a/app/views/Admin/Index.html
+++ b/app/views/Admin/Index.html
@@ -13,9 +13,9 @@
                                 <thead>
                                     <tr>
                                         <th class="w50">ID</th>
-                                        <th align="left" class="auto">用户名</th>
+                                        <th align="left" class="auto">username</th>
                                         <th align="left" class="auto">Email</th>
-                                        <th class="w100">注册时间</th>
+                                        <th class="w100">created_at</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -50,7 +50,7 @@
                                 <tbody>
                                     <tr>
                                         <td align="right" width="40%">
-                                            <span class="gray">Server Name</span>
+                                            <span class="gray">服务器</span>
                                         </td>
                                         <td align="left">
                                             <strong>{{.ServerName}}</strong>
