--- a/app/views/Admin/Rooms.html
+++ b/app/views/Admin/Rooms.html
@@ -4,47 +4,45 @@
     <div class="container" id="page-main">
         <div class="row">
             {{template "share/admin_navbar.html" .}}
-            <div class="span8">
-                <div class="row">
-                    <div class="box span8">
-                        <div class="cell"> 所有频道 </div>
-                        <div class="inner">
-                            <table class="topics table">
-                                <thead>
-                                    <tr>
-                                        <th align="left" class="auto">Room</th>
-                                        <th align="left" class="auto">status</th>
-                                        <th class="w100">save logs</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    {{range .rooms}}
-                                    <tr>
-                                        <td class="auto">
-                                            <a href="/r/{{.RoomKey}}">{{.RoomKey}}</a>
-                                        </td>
-                                        <td class="auto">
-                                            {{if .Status}} 
-                                                <a href="/admin/{{.RoomKey}}/status"> ON </a>
-                                            {{else}} 
-                                                <a href="/admin/{{.RoomKey}}/status"> OFF </a>
-                                            {{end}}
-                                        </td>
-                                        <td class="w100">
-                                            <small class="gray">
-                                                {{if .SaveLogs}} 
-                                                <a href="/admin/{{.RoomKey}}/changelog"> ON </a>
-                                                {{else}} 
-                                                <a href="/admin/{{.RoomKey}}/changelog"> OFF </a>
-                                                {{end}}
-                                            </small>
-                                        </td>
-                                    </tr>
+            <div class="box span8">
+                <div class="cell"> 所有频道 </div>
+                <div class="inner">
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th>Room</th>
+                                <th>status</th>
+                                <th>save logs</th>
+                                <th>show users</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {{range .rooms}}
+                            <tr>
+                                <td >
+                                    <a href="/r/{{.RoomKey}}">{{.RoomKey}}</a>
+                                </td>
+                                <td >
+                                    {{if .Status}} 
+                                    <a href="/admin/{{.RoomKey}}/status"> ON </a>
+                                    {{else}} 
+                                    <a href="/admin/{{.RoomKey}}/status"> OFF </a>
                                     {{end}}
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
+                                </td>
+                                <td >
+                                    {{if .SaveLogs}} 
+                                    <a href="/admin/{{.RoomKey}}/changelog"> ON </a>
+                                    {{else}} 
+                                    <a href="/admin/{{.RoomKey}}/changelog"> OFF </a>
+                                    {{end}}
+                                </td>
+                                <td>
+                                    <a href="/admin/{{.RoomKey}}/onlineUsers">online users</a>
+                                </td>
+                            </tr>
+                            {{end}}
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
