--- a/app/views/Rooms/Show.html
+++ b/app/views/Rooms/Show.html
@@ -15,7 +15,7 @@
             </ul>
         </div>
 
-        <div class="span6 well">
+        <div class="span6">
             <div class="chat-main">
                 recent message:
                 {{range .latestMessages}}
